# manole

./: .gitignore  Makefile  README.md  docker-compose.yml
.githooks/: commit-msg
.github/workflows/: ci.yml
parte1/: conceitos.md  index.js  index.test.js
parte2/api/: .dockerignore  Dockerfile  README.md  alembic.ini  create-user.sh  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  test.db
parte2/api/alembic/: env.py
parte2/api/alembic/versions/: 0001_initial.py  0002_index_task_created_at.py  0003_task_updated_at.py
parte2/api/app/: config.py  create_user.py  database.py  main.py  models.py
parte2/api/app/routes/: auth.py  tasks.py
parte2/api/app/schemas/: __init__.py  auth.py  tasks.py
parte2/api/app/utils/: auth.py
parte2/api/tests/: test_tasks.py
parte2/front-end/: Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
parte2/front-end/app/: globals.css  layout.tsx  page.tsx
parte2/front-end/components/: AuthForm.tsx  ConfirmModal.tsx  TaskForm.tsx  TaskList.tsx  Toast.tsx
parte2/front-end/components/__tests__/: TaskForm.test.tsx
parte2/front-end/hooks/: useAuth.ts  useTasks.ts
parte2/front-end/lib/: api.ts  utils.ts
parte2/front-end/lib/__tests__/: api.test.ts
parte2/front-end/types/: task.ts
