[project]
name = "tasks-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.43",
    "psycopg[binary]==3.2.9",
    "python-jose==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "pydantic==2.11.7",
    "email-validator==2.2.0",
    "alembic==1.16.4",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "httpx==0.28.1",
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
